2006-08-18  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-base-options.cc,
	schroot/schroot-options-base.cc,
	schroot/schroot-listmounts-options.cc,
	schroot/schroot-releaselock-options.cc
	(add_option_groups): Add workaround for boost if
	BOOST_PROGRAM_OPTIONS_DESCRIPTION_OLD is defined.

	* configure.ac: Add check for
	boost::program_options::options_description::options(), which does
	not exist in older versions of boost.

2006-08-18  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-ctty.cc: Include <config.h>, to prevent a build
	failure with GCC 3.3.

2006-08-07  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-session.cc
	(get_auth_status): Fix TODO comment markup.

	* Merge from schroot-1.0 branch.

	* NEWS: Document changed syslog behaviour.

	* sbuild/sbuild-session.cc
	(get_login_command, get_user_command): syslog logging of the
	command or shell being run in the chroot now only occurs when
	running as root or switching to another user.

2006-08-06  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document CTTY changes to authentication.

2006-08-05  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-session.cc
	(save_termios, restore_termios): Use CTTY_FILENO instead of
	opening and closing /dev/tty.

	* sbuild/sbuild-auth-conv-tty.cc
	(read_string): Use CTTY_FILENO in place of STDIN_FILENO, and cctty
	in place of std::cerr.  Unlike std::cerr, cctty doesn't autoflush,
	so flush by hand.  Use log_ctty_exception_warning in place of
	log_exception_warning.
	(conversation): Use log_ctty_info and log_ctty_error in place of
	log_info and log_error.

	* sbuild/sbuild-auth-conv-tty.h: Add CTTY error code.

2006-08-05  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-log.cc
	(log_ctty_info): New function.  The same as log_info, but log to
	cctty instead of std::cerr.
	(log_ctty_warning): New function.  The same as log_warning, but
	log to cctty instead of std::cerr.
	(log_ctty_error): New function.  The same as log_error, but log to